--- a/public/style.css
+++ b/public/style.css
@@ -26,7 +26,7 @@ h1 span {
 .dictionary {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: stretch;
   flex-wrap: wrap;
   margin: 4rem auto;
   max-width: 90%;
